--- a/src/app/modules/workflows/wave-list/wave-list.component.scss
+++ b/src/app/modules/workflows/wave-list/wave-list.component.scss
@@ -659,6 +659,22 @@
     align-items: center;
   }
 
+  .list-right-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    left: -17%;
+  }
+
+  .list-right-menu-collapsed {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    left: 20%;
+  }
+
   .stage-option {
     bottom: 2em;
     position: relative;
@@ -783,6 +799,23 @@
       top: 2em;
     }
 
+    .list-right-menu {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      left: 16%;
+      bottom: 2.1em;
+    }
+
+    .list-right-menu-collapsed {
+      display: flex !important;
+      justify-content: center !important;
+      align-items: center !important;
+      position: relative !important;
+      right: -10% !important;
+    }
+
     .stage-option {
       position: absolute;
       margin-top: -2em;
@@ -791,7 +824,7 @@
 
     .stage-option-collapsed {
       position: absolute;
-      right: 0;
+      right: 30px;
     }
 
     .template-name {
@@ -1378,6 +1411,23 @@
     top: 2em;
   }
 
+  .list-right-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    left: 16%;
+    bottom: 2.1em;
+  }
+
+  .list-right-menu-collapsed {
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    position: relative !important;
+    right: 32% !important;
+  }
+
   .stage-option {
     position: absolute;
     margin-top: -2em;
@@ -1413,6 +1463,23 @@
     position: relative;
     right: 27em;
     top: 2em;
+  }
+
+  .list-right-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    left: 16%;
+    bottom: 2.1em;
+  }
+
+  .list-right-menu-collapsed {
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    position: relative !important;
+    right: 41% !important;
   }
 
   .stage-option {
@@ -1452,6 +1519,23 @@
     top: 2em;
   }
 
+  .list-right-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    left: 16%;
+    bottom: 2.1em;
+  }
+
+  .list-right-menu-collapsed {
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    position: relative !important;
+    right: 43% !important;
+  }
+
   .stage-option {
     position: absolute;
     margin-top: -2em;
@@ -1487,6 +1571,23 @@
     position: relative;
     right: 27em;
     top: 2em;
+  }
+
+  .list-right-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    left: 16%;
+    bottom: 2.1em;
+  }
+
+  .list-right-menu-collapsed {
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    position: relative !important;
+    right: 46% !important;
   }
 
   .stage-option {
@@ -1526,6 +1627,23 @@
     top: 2em;
   }
 
+  .list-right-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    left: 16%;
+    bottom: 2.1em;
+  }
+
+  .list-right-menu-collapsed {
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    position: relative !important;
+    right: 50% !important;
+  }
+
   .stage-option {
     position: absolute;
     margin-top: -2em;
@@ -1561,6 +1679,23 @@
     position: relative;
     right: 27em;
     top: 2em;
+  }
+
+  .list-right-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    left: 16%;
+    bottom: 2.1em;
+  }
+
+  .list-right-menu-collapsed {
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    position: relative !important;
+    right: 52% !important;
   }
 
   .stage-option {
@@ -1600,6 +1735,23 @@
     top: 2em;
   }
 
+  .list-right-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    left: 16%;
+    bottom: 2.1em;
+  }
+
+  .list-right-menu-collapsed {
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    position: relative !important;
+    right: 54% !important;
+  }
+
   .stage-option {
     position: absolute;
     margin-top: -2em;
@@ -1637,6 +1789,23 @@
     top: 2em;
   }
 
+  .list-right-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    left: 16%;
+    bottom: 2.1em;
+  }
+
+  .list-right-menu-collapsed {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    right: 32.5%;
+  }
+
   .stage-option {
     position: absolute;
     margin-top: -2em;
@@ -1672,6 +1841,23 @@
     position: relative;
     right: 27em;
     top: 2em;
+  }
+
+  .list-right-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    left: 16%;
+    bottom: 2.1em;
+  }
+
+  .list-right-menu-collapsed {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    right: 53.5%;
   }
 
   .stage-option {
